# BSU

./: .gitignore  LICENSE  README.md
1/: реферат_ибг.docx
2.1/QT framework/TicTacToe/: README.md
2.1/algorithms and data structures/binary tree/: Is the binary tree searchable.cpp  Remove from the tree.cpp
2.1/computer graphics programming/1.colorRepresentation/: ui_mainwindow.h  отчетлаб1.docx
2.1/computer graphics programming/2.imgMetadata/: README.md  mainwindow.cpp  mainwindow.h
2.1/computer graphics programming/3.opencv/: Lab3.pro  README.md  mainwindow.cpp  rsc.qrc
2.1/computer graphics programming/4.algorithms for rasterization of segments/: plotarea.cpp
2.1/computer graphics programming/5.clipping segments/: README.md  mainwindow.cpp  mainwindow.ui  plotarea.h
2.1/computer graphics programming/6.algorithms for three-dimensional visualization/: matrix.h  plotarea.cpp
2.1/java.industrial programming/Client-Server_FoodOrderer/: README.md
2.1/java.industrial programming/RMI/: FoodDeliveryRemoteServer.java
2.1/java.industrial programming/Swing GUI/: cars.idx  cars.~dat
2.2/calculation method/1.1 reflection and gauss Methods/: calculationMethods.go  go.mod
2.2/calculation method/1.2 Iterative relaxation method and Jacobi solutions of System of linear equations/: calculationMethods.go  go.mod
2.2/calculation method/1.3 Eigenvalues and eigenvectors/: go.mod
2.2/calculation method/2.2 cubicSpline/: main.go
2.2/calculation method/2.3 Approximate integrals/: go.mod  main.go
2.2/calculation method/2.4 Coshie problem/: main.go  runge.txt  trapezoid.txt
2.2/frontend. web programming/RxJS/: package-lock.json  package.json  server.js  task.doc
2.2/frontend. web programming/basics/: page1.html  page2.html  Лаб1.doc
2.2/frontend. web programming/js spa express/: Лаб7.doc
2.2/operating systems.WINAPI/1. processes/: Child.cpp  README.md
2.2/operating systems.WINAPI/3. sync/: lab3OS.cpp
2.2/operating systems.WINAPI/4. events, mutexes and semaphores/: lab4os.cpp  reader.cpp  writer.cpp
2.2/operating systems.WINAPI/5. anonymous channel/: Alfavit.cpp  Server.cpp
3.1/1c/: 1с_лабы3-4.txt
3.1/1c/InfoBase2/: 1Cv8.1CD  1Cv8snc.1CD
3.1/1c/InfoBase4/: 1Cv8.1CD
3.1/1c/infoBase3/: 1Cv8.1CD
3.1/computer networks/: Cisco Packet Tracer Student.lnk  README.md
3.1/computer networks/lab1/: отчет_ЛАБ01.docx
3.1/computer networks/lab10/: 12_Лаб10_Сергиенко.docx  12_Лаб10_Сергиенко_1.pkt  12_Лаб10_Сергиенко_2.pkt
3.1/computer networks/lab11/: 12_Лаб11_Сергиенко.docx  (+2 more)
3.1/dbms/: Сергиенко_4.sql
3.1/linux/: ЛР0_Сергиенко.docx
3.1/mathmod/: итоговый отчет.docx
3.2/MT/: МТ_ДеревоРазбора.docx
3.2/ba/: BPMN.md  IDEF0.docx  IDEF0.md  Бизнес.docx
3.2/linux/: questions.md  ЛИС-01-17.06-ПЗ.doc  ЛИС-01-17.06.doc
3.2/mobile/lab9/lab9/task2/NumberGuess/: AppRoot.qml  AuthScreen.qml  CMakeLists.txt  GameManager.cpp  GameManager.h  NumberGuess_be_BY.ts  NumberGuess_en_US.ts  NumberGuess_ru_RU.ts  PlayScreen.qml  main.cpp
3.2/mobile/lab9/lab9/task2/NumberGuessTests/: CMakeLists.txt  tst_controllertest.cpp
3.2/mobile/lab9/lab9/task3/app/: CMakeLists.txt  DbApp_be_BY.ts  DbApp_en_US.ts  DbApp_ru_RU.ts  main.cpp
3.2/mobile/lab9/lab9/task3/app/core/: appmanager.cpp  appmanager.h
3.2/mobile/lab9/lab9/task3/app/data/: database.cpp  database.h
3.2/mobile/lab9/lab9/task3/app/logic/: recordsrepository.cpp  recordsrepository.h
3.2/mobile/lab9/lab9/task3/app/ui/: AggregateScreen.qml  AppRoot.qml  FilterScreen.qml  GroupScreen.qml  MainScreen.qml  RecordsScreen.qml
3.2/mobile/lab9/lab9/task3/app_tests/: CMakeLists.txt  tst_testdatabase.cpp
3.2/parallel_systems/: ex.md
4.1/bis/: .gitignore  Экз_билеты_Зубович_2025_2026  БИС.doc
algorithms and data structures/binary tree/: 1.cpp  Build a tree.cpp
calculation method/1.1 reflection and gauss Methods/: calculationMethods.go
calculation method/1.2 Iterative relaxation method and Jacobi solutions of System of linear equations/: main.go
calculation method/2.1 Newton Interpolating Polynomial/: main.go
calculation method/2.4 Coshie problem/: adams.txt  go.mod
calculation method/Eigenvalues and eigenvectors/: calculationMethods.go  main.go  test.txt
calculation method/Newton Interpolating Polynomial/: go.mod
calculation method/cubicSpline/: go.mod
calculation method/reflection and gauss Methods/: main.go
computer graphics programming/1.colorRepresentation/: README.md
computer graphics programming/2.imgMetadata/: mainwindow.ui
computer graphics programming/4.algorithms for rasterization of segments/: README.md  mainwindow.cpp
computer graphics programming/5.clipping segments/: mainwindow.h  plotarea.cpp
computer graphics programming/6.algorithms for three-dimensional visualization/: README.md  mainwindow.cpp
frontend. web programming/RxJS/: index.html  webpack.config.js
frontend. web programming/basics/: page3.html  page4.html
ios mobile development/lab1/: var6.c
ios mobile development/lab2/: mv.md
ios mobile development/lab4/: README.md
java.industrial programming/RMI/: FoodDelivery.java
java.industrial programming/Swing GUI/: cars.~idx
operating systems.WINAPI/processes/: Parent.cpp
operating systems.WINAPI/threads/: README.md  threads.cpp
(+1340 files in other folders)
